--- a/P8DFDA4F0.opf/meta.yml
+++ b/P8DFDA4F0.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     436142f1bb51431caa297288943c43dc:
       base_file: v047.txt
       image_group_id: I1PD95892
-      title: ''
+      title: ལྷ་མཆོད་པའི་རིམ་པ།
       total_pages: 1464
       volume_number: 47
