--- a/P8DFDA4F0.opf/layers/v047/Pagination.yml
+++ b/P8DFDA4F0.opf/layers/v047/Pagination.yml
@@ -1,33 +1,36 @@
-id: 1d36e878672d4b09b90bf49d869ee1ca
+id: 4347b1b41f8749f3b03a16e53f77e2fb
 annotation_type: Pagination
 revision: '00001'
 annotations:
-  3f603f0ad9724b278377a790fb4c1e5e:
+  05bd4e34cace4d2cac6187f964764ddb:
     imgnum: 257
     reference: ''
     span:
       start: 0
-      end: 886
-  f6353191bb3e47258d7308601c6d2915:
+      end: 881
+    note_ref: 500c09d7afc243b3b931113c5f6327c3
+  1a6c0646d4734a83bbbb9284a5205d3c:
     imgnum: 258
     reference: ''
     span:
-      start: 889
-      end: 2405
-  599ecb486cb6411280e97f5ea2286662:
+      start: 884
+      end: 2398
+    note_ref: 500c09d7afc243b3b931113c5f6327c3
+  afec9f407b094402be78a28fbc4a89c4:
     imgnum: 259
     reference: ''
     span:
-      start: 2408
-      end: 3986
-  81382254c09346ac9cf2967a5b8d0172:
+      start: 2401
+      end: 3977
+    note_ref: 500c09d7afc243b3b931113c5f6327c3
+  500c09d7afc243b3b931113c5f6327c3:
     imgnum: 260
     reference: ''
     span:
-      start: 3989
-      end: 4304
+      start: 3980
+      end: 4275
 local_ids:
-  3f603f0ad9724b278377a790fb4c1e5e: 200000
-  f6353191bb3e47258d7308601c6d2915: 200001
-  599ecb486cb6411280e97f5ea2286662: 200002
-  81382254c09346ac9cf2967a5b8d0172: 200003
+  05bd4e34cace4d2cac6187f964764ddb: 200000
+  1a6c0646d4734a83bbbb9284a5205d3c: 200001
+  afec9f407b094402be78a28fbc4a89c4: 200002
+  500c09d7afc243b3b931113c5f6327c3: 200003
