--- a/D39279AAD.opf/index.yml
+++ b/D39279AAD.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   0ef090896df44db29fc544c605f0b121:
     parts: {}
+    work_id: N3651
     span:
-    - vol: 47
+    - base: e449
       start: 0
       end: 4350
-    work_id: N3651
